fix scrollbars
Former-commit-id: cde24ae4d3fbcaf6449faab3595ae1f66162f334

--- a/src/components/GlyphList/style.scss
+++ b/src/components/GlyphList/style.scss
@@ -7,6 +7,10 @@
 
   &::-webkit-scrollbar-button:vertical:end {
     display: block;
+    height: 32px;
+  }
+
+  &.is-expanded::-webkit-scrollbar-button:vertical:end {
     height: 54px;
   }
 }
